[package]
name = "quiet"
version = "0.1.10"
edition = "2021"
author = "Sanj Sahayam"
about = "Reduce Cargo's compiler information output"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0.29", features = ["derive"] }
ansi_term = "0.12"
