[package]
name = "quiet"
version = "0.3.4"
edition = "2021"
authors = ["Sanj Sahayam"]
description = "Reduce Cargo's compiler information output"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ansi_term = "0.12"
itertools = "0.12"

[dev-dependencies]
pretty_assertions = "1"
assert_cmd = "2"
similar="2"
predicates="3"
